--- a/Day7_7-3/onclickJS.html
+++ b/Day7_7-3/onclickJS.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="testunderfined.js"></script>
 </head>
 <body>
 <button type="button" id="ok" onclick="showMessage();">Ấn vào tôi!</button>
 </body>
 </html>
 <script>
-    function showMessage() {
-        document.getElementById("ok").innerHTML ='Xin Chào';
-    }
+
 </script>
