--- a/Day6_6-3/Simpleform.html
+++ b/Day6_6-3/Simpleform.html
@@ -33,7 +33,7 @@
     <input type = "text" name="phone1" size="5"/> -
     <input type = "text" name="phone2" size="5"/> -
     <input type = "text" name="phone3" size="5"/>
-    <p><input type = "button" name="btSubmit" value="Submit"/></p>
+    <p><input type = "button" name="tSubmit" value="Submit"/></p>
 
 </form>
 </body>
