--- a/Day6_6-3/Surveykhachhang.html
+++ b/Day6_6-3/Surveykhachhang.html
@@ -8,7 +8,7 @@
 <form method="get" action="simpleform.html">
     <h2>Market Research Survey</h2>
     <h4>What is your age range</h4>
-    <select>-
+    <select>
         <option value="  ">18-24</option>
         <option>25-34</option>
         <option>35-50</option>
