--- a/Day8_8-3/Doitien.html
+++ b/Day8_8-3/Doitien.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Chuyển đổi tiền</title>
+    <script src="Doitien.js"></script>
 </head>
 <body>
 <form>
     <h4>Amount</h4>
-    <input type="text" name="nhập số tiền">
+    <input id="Amount" type="text" name="nhập số tiền">
     <h4>From Currency</h4>
-    <select>
-        <option value="  ">VNĐ</option>
-        <option>USD</option>
+    <select id="From">
+        <option value="VND">VND</option>
+        <option value="USD">USD</option>
     </select>
     <h4>To Currency</h4>
-    <select>
-        <option value="  ">VNĐ</option>
-        <option>USD</option>
-    </select>
-    <input type = "button" name="Submit" value="Submit"/>
-
+    <select id="To">
+        <option value="VND">VND</option>
+        <option value="USD">USD</option>
+    </select><br><br>
+    <button type="button" value="submit" onclick="showMessage()"/>
+    Đổi</button>
+    <p id="ketqua"></p>
 </form>
 </body>
 </html>
