--- a/Day10_10-3/kilogam.html
+++ b/Day10_10-3/kilogam.html
@@ -10,6 +10,6 @@
 <input id="kilogam" type="text" name="kg">
 <h4>Chiều cao</h4>
 <input id="met" type="text" name="met"><br><br>
-<button type="button" value="submit" onclick="ketqua">Đổi</button>
+<button type="button" value="submit" onclick="bmi()">Đổi</button>
 </body>
 </html>
