--- a/Day10_10-3/tinhsongay.html
+++ b/Day10_10-3/tinhsongay.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Timh so ngay</title>
+    <title>Tinh so ngay</title>
 </head>
 <body>
 <table>
+  <tr>
+    <th><input tpye="text" name="ngay"></th>
+    <th><button type="button" value="submit">Tính số ngày</button></th>
+  </tr>
   <tr>
     <th><input tpye="text" name="ngay"></th>
     <th><button type="button" value="submit">Tính số ngày</button></th>
