--- a/Day10_10-3/tinhsongay.html
+++ b/Day10_10-3/tinhsongay.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Tinh so ngay</title>
+    <script src="tinhsongay.js"></script>
 </head>
 <body>
 <table>
   <tr>
-    <th><input tpye="text" name="ngay"></th>
-    <th><button type="button" value="submit">Tính số ngày</button></th>
-  </tr>
-  <tr>
-    <th><input tpye="text" name="ngay"></th>
-    <th><button type="button" value="submit">Tính số ngày</button></th>
+    <th><input id="month" tpye="text" name="ngay"></th>
+    <th><button type="button"  onclick="tinhngay()">Tính số ngày</button></th>
   </tr>
 </table>
 </body>
