--- a/Day10_10-3/tinh_so_ngay.html
+++ b/Day10_10-3/tinh_so_ngay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tinh so ngay</title>
-    <script src="tinhsongay.js"></script>
+    <script src="tinh_so_ngay.js"></script>
 </head>
 <body>
 <table>
