--- a/Day6_6-3/Demo_bang_nang_cao.html
+++ b/Day6_6-3/Demo_bang_nang_cao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Demobangnangcao</title>
-  <link rel="stylesheet" href="Demobang.css">
+  <link rel="stylesheet" href="Demo_bang.css">
 
 </head>
 <body>
