--- a/Day8_8-3/Doi_tien.html
+++ b/Day8_8-3/Doi_tien.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Chuyển đổi tiền</title>
-    <script src="Doitien.js"></script>
+    <script src="Doi_tien.js"></script>
 </head>
 <body>
 <form>
