--- a/Day8_8-3/May_tinh_don_gian.html
+++ b/Day8_8-3/May_tinh_don_gian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Máy Tính Đơn Giản </title>
-    <script src="Maytinhdongian.js"></script>
+    <script src="May_tinh_don_gian.js"></script>
 </head>
 <body>
 <input id="a" type="text" name="nhập số">
