--- a/Day8_8-3/Tinh_diem.html
+++ b/Day8_8-3/Tinh_diem.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TinhdoF</title>
-    <script src="tinhdoC.js"></script>
+    <title>Title</title>
+    <script src="Tinh_diem.js"></script>
+
 </head>
 <body>
 
