--- a/Day8_8-3/Tinh_doC.html
+++ b/Day8_8-3/Tinh_doC.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="Tinhdiem.js"></script>
-
+    <title>TinhdoF</title>
+    <script src="tinh_doC.js"></script>
 </head>
 <body>
 
