--- a/Bai_tap/Xin_chao.html
+++ b/Bai_tap/Xin_chao.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Minitest</title>
+    <title>Xin chào</title>
 </head>
 <body>
-
+<script>
+alert("Phạm Quang Dương")
+</script>
 </body>
 </html>
