--- a/Bai_tap/Tinh_S_hinh_vuong.html
+++ b/Bai_tap/Tinh_S_hinh_vuong.html
@@ -7,7 +7,7 @@
 <body>
 <h3> Nhập cạnh hình vuông</h3>
 <input type="number" id="number">
-<button onclick="S">Tính</button>
+<button onclick="S()">Tính</button>
 <p id="ketqua"></p>
 </body>
 <script src="Tinh_S_hinh_vuong.js"></script>
