--- a/Bai_tap/Baitap2.html
+++ b/Bai_tap/Baitap2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bình Phương</title>
-  <script src="Binh_phuong.js"></script>
+  <script src="Baitap2.js"></script>
 </head>
 <body>
 </body>
