--- a/Bai_tap/Baitap4a.html
+++ b/Bai_tap/Baitap4a.html
@@ -7,8 +7,10 @@
 <body>
 <h3> Nhập cạnh hình vuông</h3>
 <input type="number" id="number">
+<input type="number" id="number1">
 <button onclick="S()">Tính</button>
-<p id="ketqua"></p>
+<p id="chuvi"> Chu Vi</p>
+<p id="dientich">Diện Tích</p>
 </body>
-<script src="Tinh_S_hinh_vuong.js"></script>
+<script src="Baitap4a.js"></script>
 </html>
