--- a/Bai_tap/Tinh.html
+++ b/Bai_tap/Tinh.html
@@ -10,5 +10,8 @@
 <input type="number" id="numberb" placeholder="nhập vào">
 <button onclick="ketqua()">Tính</button>
 <h1 id="ketqua"></h1>
+<h1 id="ketqua1"></h1>
+<h1 id="ketqua2"></h1>
+<h1 id="ketqua3"></h1>
 </body>
 </html>
