--- a/Bai_tap/Baitap4c.html
+++ b/Bai_tap/Baitap4c.html
@@ -8,7 +8,7 @@
 <body>
 <input type="number" id="number1">
 <input type="number" id="number2">
-<button onclick="cal()">Tổng</button>
+<button onclick="Push()">Tổng</button>
 <p id="result"></p>
 </body>
 </html>
