--- a/Bai_tap/Baitap3.html
+++ b/Bai_tap/Baitap3.html
@@ -5,8 +5,8 @@
     <title>MiniTest</title>
 </head>
 <body>
-<input type="number" name="number" id="numA" placeholder="NumberA">
-<input type="number" name="number" id="numB" placeholder="NumberB">
+<input type="number" name="number" id="numA" placeholder="Number">
+<input type="number" name="number" id="numB" placeholder="Number">
 <button onclick="changeNumber()" value="button">Button</button>
 <br>
 <h1 id="kq">Kết Quả</h1>
