--- a/Bai_tap/Tinh_gia_dien.html
+++ b/Bai_tap/Tinh_gia_dien.html
@@ -10,7 +10,7 @@
 </body>
 </html>
 <script>
-    function A (){
+    function S (){
         let n = document.getElementById("number").value ;
         let S
         if ( n < 50 ){
