--- a/Bai_tap/Baitap2.html
+++ b/Bai_tap/Baitap2.html
@@ -8,3 +8,12 @@
 <body>
 </body>
 </html>
+<script>
+    inputr = prompt("Enter the number");
+    let
+        r = parseInt(inputr);
+
+    let        area = r * r;
+    alert(area)
+
+</script>
