--- a/Bai_tap/Trang_dang_nhap.html
+++ b/Bai_tap/Trang_dang_nhap.html
@@ -12,3 +12,16 @@
   <button onclick="login()">Login</button>
 </body>
 </html>
+<script>
+    function login() {
+        let username = document.getElementById("username").value;
+        let password = document.getElementById("password").value;
+
+        if (username === "admin" && password === "123") {
+            alert("Đăng nhập tài khoản admin");
+        } else if (username === "user" && password === "123") {
+            alert("Đăng nhập tài khoản user");
+        } else
+            alert("Tài khoản không tồn tại")
+    }
+</script>
