--- a/Bai_tap/Baitap4a.html
+++ b/Bai_tap/Baitap4a.html
@@ -14,3 +14,12 @@
 </body>
 <script src="Baitap4a.js"></script>
 </html>
+<script>
+    function S (){
+        let a = document.getElementById("number").value;
+        let P = a * 4 ;
+        let S = a * a ;
+        document.getElementById("chuvi").innerHTML = P;
+        document.getElementById("dientich").innerHTML = S;
+
+</script>
