--- a/Day8_8-3/Doi_tien.html
+++ b/Day8_8-3/Doi_tien.html
@@ -25,3 +25,21 @@
 </form>
 </body>
 </html>
+<script>
+    function showMessage() {
+        let Amount = document.getElementById("Amount").value;
+        let From = document.getElementById("From").value;
+        let To = document.getElementById("To").value;
+        let ketqua;
+        if (From === "USD" && To === "VND") {
+            ketqua = Amount * 23000
+        } else if (From === "VND" && To === "USD") {
+            ketqua = Amount / 23000
+        }
+        else if (From===To){
+            ketqua=Amount+From
+        }
+        document.getElementById("ketqua").innerHTML = ketqua
+    }
+
+</script>
