--- a/Day8_8-3/S_hinhtron.html
+++ b/Day8_8-3/S_hinhtron.html
@@ -9,3 +9,8 @@
 
 </body>
 </html>
+<script>
+    let inputR=prompt("nhập bán kính");
+    let S= (parseInt(inputR)*parseInt(inputR)*3.14);
+    document.write("Diện tích là:" +S);
+</script>
