--- a/Day8_8-3/Tinh_doC.html
+++ b/Day8_8-3/Tinh_doC.html
@@ -9,3 +9,8 @@
 
 </body>
 </html>
+<script>
+    let inputC= prompt ("Enter the độ C");
+    let f = 1.8* parseInt(inputC)+32;
+    document.write("Độ F là: " +f);
+</script>
