--- a/Day10_10-3/Doyouloveme.html
+++ b/Day10_10-3/Doyouloveme.html
@@ -11,6 +11,14 @@
 <button onclick="noLove()">No</button>
 </body>
 </html>
+<script>
+    function love () {
+        document.write("<img src=\"353421d45bbe5993c74df554f9b68d1c.jpg\" height=\"230\" width=\"356\"/>")
+    }
+    function noLove () {
+        document.write("<img src=\"awm1610688013.jpg\" height=\"300\" width=\"500\"/>")
+    }
+</script>
 
 
 
