--- a/Day10_10-3/Luyentap1a.html
+++ b/Day10_10-3/Luyentap1a.html
@@ -13,3 +13,14 @@
 
 </body>
 </html>
+<script>
+    function number(){
+        let  number1= document.getElementById("numbera").value;
+        let number2= document.getElementById("numberb").value;
+        if  (number1 % number2 === 0) {
+            alert("a chia het cho b");
+        }else{
+            alert("khong chia het");
+        }
+    }
+</script>
