--- a/Day10_10-3/nam_nhuan.html
+++ b/Day10_10-3/nam_nhuan.html
@@ -9,3 +9,19 @@
 
 </body>
 </html>
+<script>
+    let year = parseInt(prompt("Enter a year"));
+    if (year % 4 == 0) {
+        if (year % 100 == 0) {
+            if (year % 400 == 0) {
+                alert(year + " Năm Nhuận");
+            } else {
+                alert(year + " Không Nhuận");
+            }
+        } else {
+            alert(year + " Năm Nhuận");
+        }
+    } else {
+        alert(year + " Không Nhuận");
+    }
+</script>
