--- a/Day10_10-3/tinh_so_ngay.html
+++ b/Day10_10-3/tinh_so_ngay.html
@@ -14,3 +14,33 @@
 </table>
 </body>
 </html>
+<script>
+    function tinhngay(){
+        let month = +document.getElementById("month").value;
+        switch (month) {
+            case 1:
+                alert("tháng có 31 ngày");
+                break;
+            case 2:
+                alert("tháng có 28 hoặc 29 ngày");
+                break;
+            case 3:
+                alert("tháng có 31 ngày");;
+                break;
+            case 4:
+                alert("tháng có 30 ngày");;
+                break;
+            case 5:
+                alert("tháng có 31 ngày");;
+                break;
+            case 6:
+                alert("tháng có 30 ngày");;
+                break;
+            case 7:
+                alert("tháng có 31 ngày");;
+                break;
+        }
+
+    }
+
+</script>
