--- a/Day9_9-3/answer.html
+++ b/Day9_9-3/answer.html
@@ -9,3 +9,11 @@
 
 </body>
 </html>
+<script>
+let value = prompt('Do you love me?', '');
+if (value == 'Yes') {
+alert('Right!');
+} else {
+alert("over");
+}
+</script>
