--- a/Day11_13-3/Bang_cuu_chuong.html
+++ b/Day11_13-3/Bang_cuu_chuong.html
@@ -11,10 +11,16 @@
 <script>
 let i
 let j
-for ( i = 2 ; i < 11 ; i ++){
-    for (j = 1; j < 11; j++) {
-        number = i + "*" + j + "=" + (i * j) + "<br>";
-        document.write(number)
+let data = "<table>"
+for ( i = 1 ; i < 11 ; i ++) {
+    data += "<tr>"
+    for (j = 2; j < 11; j++) {
+        data += "<td>"
+        data += i + "*" + j + "=" + (i * j);
+        data += "</td>"
     }
-}
+    data += "</tr>"
+}data +="</table>"
+
+        document.write(data)
 </script>
