--- a/Day12_14-3/vonglap1_3.html
+++ b/Day12_14-3/vonglap1_3.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,5 +17,4 @@
         firstNum = lastNum;
         lastNum = nextStep;
     }
-
 </script>
